--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["cf_xarray", "cf_xarray.data", "cf_xarray.scripts"]
+packages = ["cf_xarray", "cf_xarray.scripts"]
 
 [tool.setuptools.exclude-package-data]
 cf_xarray = ["tests/*"]
