--- a/.github/workflows/pypi.yaml
+++ b/.github/workflows/pypi.yaml
@@ -97,3 +97,5 @@ jobs:
           path: dist
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@v1.8.5
+        with:
+          verbose: true
