--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
     rev: 'v0.1.1'
     hooks:
       - id: ruff
-        args: ["--fix"]
+        args: ["--show-fixes", "--fix"]
 
   - repo: https://github.com/psf/black-pre-commit-mirror
     rev: 23.10.1
