--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -68,7 +68,7 @@ repos:
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
     hooks:
-      - id: python-check-blanket-type-ignore
+      # - id: python-check-blanket-type-ignore
       - id: rst-backticks
       - id: rst-directive-colons
       - id: rst-inline-touching-normal
