--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,12 +36,12 @@ jobs:
         run: |
           echo "PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: ci/environment.yml
+          environment-file: ci/environment-no-optional-deps.yml
           environment-name: cf_xarray_test
-          cache-env: true
-          extra-specs: |
+          cache-environment: true
+          create-args: >-
             python="${{ matrix.python-version }}"
       - name: Install cf_xarray
         run: |
@@ -70,11 +70,11 @@ jobs:
           # need to fetch all tags to get a correct version
           fetch-depth: 0  # fetch all branches and tags
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: ci/environment-no-optional-deps.yml
           environment-name: cf_xarray_test
-          cache-env: true
+          cache-environment: true
       - name: Install cf_xarray
         run: |
           python -m pip install --no-deps -e .
@@ -97,12 +97,12 @@ jobs:
         with:
           fetch-depth: 0 # Fetch all history for all branches and tags.
       - name: Set up conda environment
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: ci/environment.yml
           environment-name: cf_xarray_test
-          cache-env: true
-          extra-specs: |
+          cache-environment: true
+          create-args: >-
             python="${{ matrix.python-version }}"
       - name: Install cf_xarray
         run: |
