--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,15 +1,16 @@
 version: 2
 
 build:
-  os: ubuntu-22.04
+  os: ubuntu-lts-latest
   tools:
-    python: mambaforge-4.10
+    python: mambaforge-latest
   jobs:
     post_checkout:
       - (git --no-pager log --pretty="tformat:%s" -1 | grep -vqF "[skip-rtd]") || exit 183
     pre_install:
       - conda list sphinx
       - conda list cf_xarray
+      - conda list
 
 conda:
   environment: ci/doc.yml
