--- a/ci/doc.yml
+++ b/ci/doc.yml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
 dependencies:
   - pip
-  - python=3.10
+  - python
   - matplotlib-base
   - netcdf4
   - pooch
@@ -20,7 +20,7 @@ dependencies:
   - pint
   - regex
   - shapely
-  - furo
+  - furo>=2024
   - myst-nb
   - pip:
       - -e ../
