--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "xarray",
+    "xarray>=2022.03.0",
 ]
 dynamic = ["version"]
 
@@ -54,10 +54,10 @@ write_to_template= '__version__ = "{version}"'
 tag_regex= "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"
 
 [tool.black]
-target-version = ["py39"]
+target-version = ["py310"]
 
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 builtins = ["ellipsis"]
 exclude = [
     ".eggs",
