--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,6 +28,14 @@ jobs:
       matrix:
         os: ["ubuntu-latest"]
         python-version: ["3.10", "3.13"]
+        env: [""]
+        include:
+          - env: "all-min-deps"
+            python-version: "3.10"
+            os: ubuntu-latest
+          - env: "no-optional-deps"
+            python-version: "3.13"
+            os: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
@@ -35,10 +43,22 @@ jobs:
       - name: Set environment variables
         run: |
           echo "PYTHON_VERSION=${{ matrix.python-version }}" >> $GITHUB_ENV
+          if [[ "${{ matrix.env }}" == "all-min-deps" ]] ;
+          then
+              echo "CONDA_ENV_FILE=ci/environment-all-min-deps.yml" >> $GITHUB_ENV
+          fi
+          if [[ "${{ matrix.env }}" == "" ]] ;
+          then
+              echo "CONDA_ENV_FILE=ci/environment.yml" >> $GITHUB_ENV
+          fi
+          if [[ "${{ matrix.env }}" == "no-optional-deps" ]] ;
+          then
+              echo "CONDA_ENV_FILE=ci/environment-no-optional-deps.yml" >> $GITHUB_ENV
+          fi
       - name: Set up conda environment
         uses: mamba-org/setup-micromamba@v2
         with:
-          environment-file: ci/environment.yml
+          environment-file: ${{ env.CONDA_ENV_FILE }}
           environment-name: cf_xarray_test
           cache-environment: true
           create-args: >-
@@ -57,31 +77,6 @@ jobs:
           env_vars: RUNNER_OS,PYTHON_VERSION
           name: codecov-umbrella
           fail_ci_if_error: false
-
-  no-optional-deps:
-    name: no-optional-deps
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash -l {0}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          # need to fetch all tags to get a correct version
-          fetch-depth: 0  # fetch all branches and tags
-      - name: Set up conda environment
-        uses: mamba-org/setup-micromamba@v2
-        with:
-          environment-file: ci/environment-no-optional-deps.yml
-          environment-name: cf_xarray_test
-          cache-environment: true
-      - name: Install cf_xarray
-        run: |
-          python -m pip install --no-deps -e .
-      - name: Run Tests
-        shell: bash -l {0}
-        run: |
-          pytest -n 2
 
   mypy:
     name: mypy
